# u-search

./: Cargo.toml  README.md
examples/egui/: .gitignore  Cargo.toml  build.rs  database.zearch  dataset.csv
examples/egui/src/: app.rs  main.rs
examples/zdimension/: Cargo.toml
examples/zdimension/src/: main.rs
src/: lib.rs  main.rs
src/ranking_rules/: exact.rs  mod.rs  typo.rs  word.rs
